# WelQrate

./: .gitignore  README.md  check_mols.ipynb  check_scaffold.ipynb  dataset.py  example.py  loader.py  main.py  process_dataset.py  pyproject.toml  requirement.txt  requirements.txt  scaffold_check.py  setup.py  test.py  train.py
config/: GCN.cfg  dimenetplusplus.cfg  dimenetplusplus.yaml  example.cfg  gat.cfg  gat.yaml  gcn.cfg  gcn.yaml  gin.cfg  gin.yaml  mlp.cfg  mlp.yaml  schnet.cfg  schnet.yaml  smiles2vec.cfg  smiles2vec.yaml  spherenet.cfg  spherenet.yaml  textcnn.cfg  textcnn.yaml  train.cfg  train.yaml
models/MLP/: mlp.py
models/gnn25d/: ChIRoNet.py
models/gnn2d/: GAT.py  GCN.py  GIN.py
models/gnn3d/: EGNN.py
models/gnn3d/.ipynb_checkpoints/: SchNet-checkpoint.py  Spherenet-checkpoint.py
models/smiles/.ipynb_checkpoints/: smiles2vec-checkpoint.py
mol_utils/: preprocess.py  random_split.py  scaffold_split.py
mol_utils/.ipynb_checkpoints/: BCL_dataset-checkpoint.py  random_split-checkpoint.py  scaffold_split-checkpoint.py
scripts/: train_gcn.py
utils/: evaluation.py  finetune_utils.py  plot_loss.py  rank_prediction.py  test.py  train.py
utils/.ipynb_checkpoints/: test-checkpoint.py
welqrate/: dataset.py  loader.py  scheduler.py  test.py  train.py
welqrate/experiment_utils/: gcn_hparams.py  seed_run.py
welqrate/models/MLP/: mlp.py
welqrate/models/gnn2d/: GAT.py  GATv2.py  GCN.py  (+2 more)
welqrate/mol_utils/: BCL_dataset.py  ChIRo_dataset.py  embedding_functions.py  features.py  preprocess.py
welqrate/utils/: evaluation.py  rank_prediction.py
(+5 files in other folders)
